v0.31.0 2020-07-14T08:57:12+0800
  - Add a site-specific extractor for newtalk.tw
  - Add a site-specific extractor for talk.ltn.com.tw

v0.30.0 2020-07-12T17:10:32+0800
  - Add a site-specific extractor for focustaiwan.tw
  - Improve extraction of dateline and journailst for a few existing news sites.

v0.29.0 2020-07-11T18:33:51+0800
  - Add a site-specific extractor for news.cctv.com

v0.28.0 2020-07-09T23:28:40+0800
  - Add a site-specific extractor for www.xinhuanet.com
  - Add a site-specific extractor for hk.on.cc

v0.27.0 2020-07-06T22:17:57+0800
  - Add a site-specific extractor for new.ctv.com.tw
  - Add a site-specific extractor for hk.crntt.com

v0.26.0 2020-07-03T18:13:05+0800
  - Adjust the dateline output

v0.25.0 2020-07-02T21:40:30+0800
  - Add a site-specific extractor for www.twreporter.org
  - Convert extracted dateline to iso8601 format (pts)

v0.24.0 2020-06-29T08:46:10+0800
  - Convert extracted dateline to iso8601 format (peopo, fountmedia)
  - Improve the extraction of journalist names on SETN
  - Handle an error when parsing dateline on www.idn.com.tw

v0.23.0 2020-05-15T23:10:02+0800
  - Improve the extraction of journalist names on CNA, ETToday, turnnewsapp.com

v0.22.0 2020-05-11T23:40:22+0800
  - Improve the extraction of journalist names

v0.21.0 2020-05-10T07:53:41+0800
  - Improve the extraction of journalist names on news.tnn.tw
  - Improve the extraction of journalist names on NTDTV

v0.20.0 2020-05-05T21:22:48+0800
  - CTS: rewritten for quicker extraction.

v0.19.0 2020-05-04T14:01:50+0800
  - UDN: Update the CSS ruleset for udn.com
  - Add a site-specific extractor for www.idn.com.tw
  - Niusnews: Extract journalist name
  - SETN: Non-human journalist names are now extracted too.
  - Properly handle non-article pages.

v0.18.0 2020-05-03T19:53:12+0800
  - Add a site-specific extractor for www.ttv.com.tw
  - Add a site-specific extractor for www.hkcnews.com
  - Add a site-specific extractor for www.thestandnews.com