@@ -245,3 +245,4 @@ https://talk.ltn.com.tw/article/breakingnews/3194811
 https://newtalk.tw/citizen/view/56437
 https://newtalk.tw/news/view/2020-07-13/435258
 https://www.idn.com.tw/news/news_content.aspx?catid=4&catsid=2&catdid=0&artid=20200715hsieh008
+http://www.hkcna.hk/content/2020/0717/839039.shtml
